# semilang

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  _ast.py  _lexer.py  _parser.py  _token.py  lexer.py  main.py  parser.py  pyproject.toml  run.sh  semilang  setup.sh  test.py  token.py
c_codes/: func.c  func_2.c  gc.c
cases/: define.semi  function_1.semi  function_2.semi  function_3.semi  if_1.semi  if_2.semi
lib/: __init__.py  ast_.py  lexer_.py  parser_.py  trans_.py
src/: semilang.py
